--- a/src-backend/package.json
+++ b/src-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=30000"
+    "test": "cross-env NODE_ENV=test jest --config jest.config.js --testTimeout=30000"
   },
   "keywords": [],
   "author": "",
