--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
+/src-backend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,36 +11,47 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Tauri
+/src-tauri/target/
+/src-tauri/Cargo.lock
+
+# Production
 /build
 
-# misc
+# SQLite Database
+/src-backend/database.db
+/src-backend/database.db-journal
+
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Logs & Debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
+# Genkit & Environment
 .genkit/*
 .env*
+!.env.example
 
-# firebase
+# Firebase
 firebase-debug.log
 firestore-debug.log
