--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "tauri": "tauri",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
