--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1.5.3", features = [] }
+tauri-build = { version = "2.3.0", features = [] }
 
 [dependencies]
-tauri = { version = "1.6.8", features = ["shell-open"] }
+tauri = { version = "2.6.2", features = [] }
+tauri-plugin-shell = "2.0.0-beta.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
