--- a/src-backend/package.json
+++ b/src-backend/package.json
@@ -2,7 +2,10 @@
   "name": "src-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "build": "pkg . -t node18-win-x64 -o ../src-tauri/binaries/backend.exe",
     "test": "cross-env NODE_ENV=test jest --config jest.config.js --testTimeout=30000 --runInBand"
   },
   "keywords": [],
@@ -18,6 +21,8 @@
     "axios": "^1.10.0",
     "cross-env": "^7.0.3",
     "jest": "^30.0.4",
+    "nodemon": "^3.1.10",
+    "pkg": "^5.8.1",
     "supertest": "^7.1.3"
   }
 }
