--- a/src-backend/package.json
+++ b/src-backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
   },
