--- a/src-backend/package.json
+++ b/src-backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
   },
