--- a/src-backend/package.json
+++ b/src-backend/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "nanoid": "^5.1.5",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
