--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri",
+    "prepackage:portable": "npm run tauri build",
+    "package:portable": "node scripts/create-portable.js",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -65,8 +67,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "archiver": "^7.0.1",
     "cross-env": "^7.0.3",
+    "fs-extra": "^11.3.0",
     "genkit-cli": "^1.13.0",
+    "glob": "^11.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
