--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "compile:frontend": "next build",
     "start": "next start",
     "lint": "next lint",
+    "compile:backend": "node scripts/prepare-installer-files.js",
     "tauri": "tauri",
     "prepackage:portable": "npm run tauri build",
     "package:portable": "node scripts/create-portable.js",
